--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
-    "puppeteer-core": "^21.1.1"
+    "puppeteer": "^20.9.0",
+    "puppeteer-core": "^20"
   }
 }
