--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
     "puppeteer": "^21.1.1",
+    "puppeteer-chromium-resolver": "^20.0.0",
     "puppeteer-core": "^21.1.1"
   }
 }
