--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.6.0",
     "puppeteer": "^21.1.1",
     "puppeteer-chromium-resolver": "^20.0.0",
-    "puppeteer-core": "^21.1.1"
+    "puppeteer-core": "^21.1.1",
+    "puppeteer-extra": "^3.3.6"
   }
 }
