--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
-    "puppeteer": "^21.1.1",
-    "puppeteer-core": "^21.1.1",
-    "puppeteer-extra": "^3.3.6"
+    "puppeteer": "^17.1.3",
+    "puppeteer-core": "^17.1.3"
   }
 }
